--- a/src/app/components/main/topbar/topbar.component.html
+++ b/src/app/components/main/topbar/topbar.component.html
@@ -9,16 +9,18 @@
   <span *ngIf="appMenu.badge | async" class="badge">{{appMenu.badgeCount | async}}</span>
   <fa-icon id="menuIcon" [icon]="menuIcon" size="2x" [fixedWidth]="true"></fa-icon>
 </div>
-<div id="matchInfoWrapper" class="iconWrapper" *ngIf="signalrService.$info | async;let matchInfo">
-  <span>{{matchInfo.matchGroup | matchGroup | translate}}</span>
-  <ng-container *ngIf="matchInfo.matchGroup == 'CLAN'">
-    &nbsp;(Season {{matchInfo.clanwarsSeason}})
-  </ng-container>
-  <ng-container *ngIf="matchInfo.matchGroup == 'RANKED'">
-    &nbsp;(Season {{matchInfo.rankedSeason}})
-  </ng-container>
-  <span>, {{matchInfo.map.name}}</span>
-</div>
+<ng-container *showOn="'tablet';higher:true">
+  <div id="matchInfoWrapper" class="iconWrapper" *ngIf="signalrService.$info | async;let matchInfo">
+    <span>{{matchInfo.matchGroup | matchGroup | translate}}</span>
+    <ng-container *ngIf="matchInfo.matchGroup == 'CLAN'">
+      &nbsp;(Season {{matchInfo.clanwarsSeason}})
+    </ng-container>
+    <ng-container *ngIf="matchInfo.matchGroup == 'RANKED'">
+      &nbsp;(Season {{matchInfo.rankedSeason}})
+    </ng-container>
+    <span>, {{matchInfo.map.name}}</span>
+  </div>
+</ng-container>
 
 <div class="states">
   <ng-container *isDesktop>
