--- a/src/app/components/main/monitor/player/player.component.html
+++ b/src/app/components/main/monitor/player/player.component.html
@@ -1,5 +1,5 @@
 <div class="info-wrapper"
-  [ngClass]="{ 'me': player.relation == 0, 'bot': player.bot, 'hidden': player.hidden, 'player': !player.bot && !player.hidden, 'no-battles': !player.bot && !player.hidden && !player.shipStats, 'force-white': !config.coloredValues, 'legacy': true }"
+  [ngClass]="{ 'me': player.relation == 0, 'bot': player.bot, 'hidden': player.hidden, 'player': !player.bot && !player.hidden, 'no-battles': !player.bot && !player.hidden && !player.shipStats, 'force-white': !config.coloredValues, 'legacy': false, 'compact': true }"
   (click)="openWowsNumbers(player)">
   <div id="name">
     <strong>
@@ -9,44 +9,63 @@
     </strong>
   </div>
   <div id="ovr-winrate">
-    Account Winrate: <strong
-      [style.color]="player.overallStats?.winrateColor | sanitizeCss">{{player.overallStats?.winrate | number:'0.0-2'}}%</strong>
+    <app-value-label label="Account Winrate" [icon]="faTrophy">
+      <strong
+        [style.color]="player.overallStats?.winrateColor | sanitizeCss">{{player.overallStats?.winrate | number:'0.0-2'}}%</strong>
+    </app-value-label>
   </div>
   <div id="ovr-battles">
-    Account Battles: <strong
-      [style.color]="player.overallStats?.battlesColor | sanitizeCss">{{player.overallStats?.battles}}</strong>
+    <app-value-label label="Account Battles" [icon]="faGavel">
+      <strong [style.color]="player.overallStats?.battlesColor | sanitizeCss">{{player.overallStats?.battles}}</strong>
+    </app-value-label>
   </div>
   <div id="karma">
-    Karma: <strong>{{player.karma}}</strong>
+    <app-value-label label="Karma" [icon]="faHeart">
+      <strong>{{player.karma}}</strong>
+    </app-value-label>
   </div>
   <div id="ship">
     <strong>{{player.shipInfo.name}}</strong> (Tier {{player.shipInfo.tier | roman}})
   </div>
   <div id="winrate">
-    Winrate: <strong
-      [style.color]="player.shipStats?.winrateColor | sanitizeCss">{{player.shipStats?.winrate | number:'0.0-2'}}%</strong>
+    <app-value-label label="Winrate" [icon]="faTrophy">
+      <strong
+        [style.color]="player.shipStats?.winrateColor | sanitizeCss">{{player.shipStats?.winrate | number:'0.0-2'}}%</strong>
+    </app-value-label>
   </div>
   <div id="battles">
-    Battles: <strong>{{player.shipStats?.battles}}</strong>
+    <app-value-label label="Battles" [icon]="faGavel">
+      <strong>{{player.shipStats?.battles}}</strong>
+    </app-value-label>
   </div>
   <div id="wins">
-    Wins: <strong>{{player.shipStats?.wins}}</strong>
+    <app-value-label label="Wins" [icon]="faTrophy">
+      <strong>{{player.shipStats?.wins}}</strong>
+    </app-value-label>
   </div>
   <div id="pr">
-    PR: <span [pTooltip]="'monitor.pr.poweredBy' | translate" tooltipPosition="bottom"
-      [style.color]="player.shipStats?.personalRatingColor | sanitizeCss"><strong>{{player.shipStats?.personalRating}}</strong></span>
+    <app-value-label label="PR" [icon]="faExclamation">
+      <span [pTooltip]="'monitor.pr.poweredBy' | translate" tooltipPosition="bottom"
+        [style.color]="player.shipStats?.personalRatingColor | sanitizeCss"><strong>{{player.shipStats?.personalRating}}</strong></span>
+    </app-value-label>
   </div>
   <div id="avg-damage">
-    Avg Damage: <strong
-      [style.color]="player.shipStats?.averageDamageColor | sanitizeCss">{{player.shipStats?.averageDamage | number:'0.0-0'}}</strong>
+    <app-value-label label="Avg Damage" [icon]="faFire">
+      <strong
+        [style.color]="player.shipStats?.averageDamageColor | sanitizeCss">{{player.shipStats?.averageDamage | number:'0.0-0'}}</strong>
+    </app-value-label>
   </div>
   <div id="avg-frags">
-    Avg Frags: <strong
-      [style.color]="player.shipStats?.averageFragsColor | sanitizeCss">{{player.shipStats?.averageFrags | number:'0.0-1'}}</strong>
+    <app-value-label label="Avg Frags" [icon]="faSkull">
+      <strong
+        [style.color]="player.shipStats?.averageFragsColor | sanitizeCss">{{player.shipStats?.averageFrags | number:'0.0-1'}}</strong>
+    </app-value-label>
   </div>
   <div id="avg-xp">
     <ng-container *ngIf="!cw">
-      Avg Xp: <strong>{{player.shipStats?.averageXp | number:'0.0-0'}}</strong>
+      <app-value-label label="Avg Xp" [icon]="faBulb">
+        <strong>{{player.shipStats?.averageXp | number:'0.0-0'}}</strong>
+      </app-value-label>
     </ng-container>
   </div>
   <div id="message">
