added layout mode to config and settings

--- a/src/app/components/main/monitor/player/value-label/value-label.component.html
+++ b/src/app/components/main/monitor/player/value-label/value-label.component.html
@@ -1,8 +1,8 @@
-<span [pTooltip]="label" tooltipPosition="top">
-  <ng-container *ngIf="false">
+<span [pTooltip]="config.layoutMode !== 'compact' ? null : label" tooltipPosition="top">
+  <ng-container *ngIf="config.layoutMode !== 'compact'">
     {{label}}:&nbsp;
   </ng-container>
-  <ng-container *ngIf="true">
+  <ng-container *ngIf="config.layoutMode === 'compact'">
     <fa-icon [icon]="icon" [fixedWidth]="true"></fa-icon>&nbsp;
   </ng-container>
   <ng-content></ng-content>
