--- a/src/app/components/main/monitor/monitor.component.html
+++ b/src/app/components/main/monitor/monitor.component.html
@@ -1,5 +1,4 @@
-<div class="container {{$fontSizeClass | async}}"
-  *ngIf="signalrService.$info | async;let matchInfo">
+<div class="container {{$fontSizeClass | async}}" *ngIf="signalrService.$info | async;let matchInfo">
   <p-card id="monitor-friendly-clan" class="no-padding">
     <app-team [clan]="matchInfo.friendlyClan" [team]="matchInfo.friendlyTeam" [cw]="matchInfo.matchGroup == 'CLAN'">
     </app-team>
@@ -25,4 +24,10 @@
 
 
   </p-card>
+</div>
+
+<div *ngIf="!(signalrService.$info | async)" class="empty-monitor">
+  <span>
+    <fa-icon [icon]="faWifi" [fixedWidth]="true"></fa-icon>&nbsp;{{'monitor.empty' | translate}}
+  </span>
 </div>
