--- a/src/styles/monitor.scss
+++ b/src/styles/monitor.scss
@@ -3,6 +3,21 @@
 app-monitor {
   display: block;
   line-height: 1em;
+  min-height: 100%;
+
+  .empty-monitor {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+
+    span {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 1.5em;
+    }
+  }
 
   .container {
     display: grid;
