Removed allowBeta from html, google analytics for dev mode

--- a/src/app/components/main/settings/settings.component.html
+++ b/src/app/components/main/settings/settings.component.html
@@ -14,7 +14,7 @@
           <p-inputSwitch [(ngModel)]="config.autoUpdate"></p-inputSwitch>
         </div>
       </article>
-      <article>
+      <!-- <article>
         <caption>
           {{ 'settings.general.allowBeta.caption' | translate }}
         </caption>
@@ -24,7 +24,7 @@
         <div class="input-wrap">
           <p-inputSwitch [(ngModel)]="config.allowBeta"></p-inputSwitch>
         </div>
-      </article>
+      </article> -->
       <article *isDesktop>
         <caption>
           {{ 'settings.general.closeToTray.caption' | translate }}
