--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -55,6 +55,8 @@
     grid-area: input;
     display: flex;
     align-items: center;
+    padding-top: 1em;
+    flex-direction: row-reverse;
   }
 }
 
@@ -62,18 +64,23 @@
 @media (min-width: 400px) {}
 
 /* Larger than phablet */
-@media (min-width: 550px) {
+@media (min-width: 550px) {}
+
+/* Larger than tablet */
+@media (min-width: 750px) {
   .settings article {
     gap: 1em;
     grid-template-areas: 'caption .'
       'summary input';
     grid-template-columns: auto max-content;
     grid-template-rows: auto 1fr;
+
+    .input-wrap {
+      padding-top: 0;
+      flex-direction: row;
+    }
   }
 }
-
-/* Larger than tablet */
-@media (min-width: 750px) {}
 
 /* Larger than desktop */
 @media (min-width: 1000px) {}
