--- a/src/app/components/default/default.component.html
+++ b/src/app/components/default/default.component.html
@@ -2,5 +2,11 @@
   <div class="centered-logo">
     <video src="assets/loader.webm" autoplay loop></video>
     <span>WoWs Monitor</span>
+    <ng-container *ngIf="updating">
+      <div>
+        <p-progressBar mode="indeterminate"></p-progressBar>
+      </div>
+      <span>Updating...</span>
+    </ng-container>
   </div>
 </div>
