Added median and weighted averages

--- a/src/app/components/main/monitor/team/team.component.html
+++ b/src/app/components/main/monitor/team/team.component.html
@@ -9,13 +9,13 @@
   <span class="inner">
     <strong>Avg Ships</strong>
     <span>Xp: {{team.shipXp | number:'0.0-0'}}</span>
-    <span>Winrate: {{team.shipWinrate | number:'0.0-2'}}%</span>
+    <span>Winrate: {{shipWinrate | number:'0.0-2'}}%</span>
     <span>Battles: {{team.shipBattles | number:'0.0-0'}} </span>
   </span>
   <span class="inner">
     <strong>Avg Accounts</strong>
     <span>Xp: {{team.overallXp | number:'0.0-0'}}</span>
-    <span>Winrate: {{team.overallWinrate | number:'0.0-2'}}%</span>
+    <span>Winrate: {{overallWinrate | number:'0.0-2'}}%</span>
     <span>Battles: {{team.overallBattles | number:'0.0-0'}} </span>
   </span>
 </span>
