--- a/src/app/components/main/topbar/path-picker/path-picker-dialog/path-picker-dialog.component.html
+++ b/src/app/components/main/topbar/path-picker/path-picker-dialog/path-picker-dialog.component.html
@@ -2,11 +2,17 @@
 
 <div class="input-wrap ui-fluid space-bottom">
   <div class="ui-inputgroup">
-    <input pInputText [title]="config.selectedDirectory" type="text" pInputText [disabled]="true"
-      [(ngModel)]="config.selectedDirectory">
+    <input pInputText [title]="config.mainClient" type="text" pInputText [disabled]="true"
+      [ngModel]="config.mainClient">
     <button pButton type="button" icon="pi pi-folder" (click)="pickPath()"></button>
   </div>
 </div>
+<ng-container *ngIf="paths.length > 0">
+  <h3>{{ 'pathPicker.multiClientSelect' | translate  }}</h3>
+  <div class="input-wrap ui-fluid space-bottom">
+    <p-dropdown [options]="options" [(ngModel)]="config.selectedDirectory"></p-dropdown>
+  </div>
+</ng-container>
 <ng-container *ngIf="directoryService.$status | async;let info">
   <h3>{{'pathPicker.additionalInfo' | translate}}</h3>
   <pre>
