Filtering and layout for livefeed

--- a/src/app/components/main/monitor/monitor.component.html
+++ b/src/app/components/main/monitor/monitor.component.html
@@ -1,5 +1,5 @@
 <div class="floating-buttons">
-  <a routerLink="/home/settings/appearance">
+  <a routerLink="/home/settings/appearance" class="round-icon-button">
     <fa-icon [icon]="faPaintBrush" [fixedWidth]="true"></fa-icon>
   </a>
 </div>
