--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,4 @@
 @import 'styles/settings.scss';
 @import 'styles/changelogs.scss';
 @import 'styles/configtool.scss';
+@import 'styles/clanwars.scss';
