--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,3 @@
-app-default {}
-
 html,
 body {
   overflow: hidden;
@@ -59,32 +57,32 @@ a {
   &:hover {
     opacity: 1;
   }
+}
 
-  a {
-    position: relative;
-    background: $primaryColor;
-    color: #FFF !important;
+.round-icon-button {
+  position: relative;
+  background: $primaryColor;
+  color: #FFF !important;
+  display: block;
+  border-radius: 50%;
+  height: 2.5em;
+  font-size: 1.5em;
+  width: 2.5em;
+  cursor: pointer;
+  transition: .3s all ease-in-out;
+
+  &:hover,
+  &:active {
+
+    background: $primaryDarkColor;
+  }
+
+  fa-icon {
     display: block;
-    border-radius: 50%;
-    height: 2.5em;
-    font-size: 1.5em;
-    width: 2.5em;
-    cursor: pointer;
-    transition: .3s all ease-in-out;
-
-    &:hover,
-    &:active {
-
-      background: $primaryDarkColor;
-    }
-
-    fa-icon {
-      display: block;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-    }
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
 
@@ -229,8 +227,7 @@ main {
 @media (min-width: 1000px) {}
 
 /* Larger than Desktop HD */
-@media (min-width: 1200px) {
-}
+@media (min-width: 1200px) {}
 
 @media (min-width: 1800px) {
   .floating-buttons {
